--- a/website/index.html
+++ b/website/index.html
@@ -1,13 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="/deps/htmx.min.js"></script>
+    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/utils.css">
+    <title>Document</title>
+</head>
+
+<body class="container">
+    <header class="flex space-between">
+        <h1>WaterFlow</h1>
+        <button hx-get="/leitura/toggle">Nova Leitura</button>
+    </header>
+
+    <div class="grid">
+        <div>Leitura Atual</div>
+        <div>Leitura 1</div>
+    </div>
+</body>
+
 </html>
